--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^19.2.0",
     "react": "^19.2.0",
     "lucide-react": "^0.553.0",
-    "@google/genai": "^1.29.0"
+    "@google/genai": "^1.29.0",
+    "react-router-dom": "6.25.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
