--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "lucide-react": "^0.553.0",
-    "@google/genai": "^1.29.0",
+    "react-dom": "19.2.0",
+    "react": "19.2.0",
+    "lucide-react": "0.553.0",
+    "@google/genai": "1.29.0",
     "react-router-dom": "6.25.1"
   },
   "devDependencies": {
