feat: Refactor API configuration and settings modal
This commit centralizes API configuration in `constants.ts`, including details for various AI providers and versioning information. It also streamlines the settings modal by:

- Removing `react-router-dom` dependency.
- Introducing an `ApiService` type for better API service management.
- Adding loading indicators and error handling states to the API configuration section.
- Enhancing the theme selection UI for better user experience.
- Improving the visual presentation and functionality of various settings categories.

The `index.tsx` and `index.html` files are updated to reflect the removal of `react-router-dom` and to use local module imports instead of CDN imports. `tsconfig.json` is updated with path aliases for better module resolution. `vite.config.ts` is updated to include path aliases.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
     "moduleDetection": "force",
     "allowJs": true,
     "jsx": "react-jsx",
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    },
     "allowImportingTsExtensions": true,
     "noEmit": true
   }
